feat: integrate followers/following api and update swagger
