# threads-web/src/apis/user.api.ts
@@ -1,6 +1,6 @@
 import config from "~/constant/config"
 import { Follow } from "~/types/follow.type"
-import { User } from "~/types/user.type"
+import { User, UserFollowers, UserFollowing } from "~/types/user.type"
 import { SuccessResponse } from "~/types/utils.type"
 import http from "~/utils/http"
 
@@ -19,5 +19,19 @@ export const userApi = {
 
   getUserProfile: (username: string) => http.get<SuccessResponse<User>>(`${config.users}/${username}`),
   follow: (body: { followed_user_id: string }) => http.post<SuccessResponse<Follow>>(config.follow, body),
-  unfollow: (user_id: string) => http.delete<SuccessResponse<Follow>>(`${config.unfollow}/${user_id}`)
+  unfollow: (user_id: string) => http.delete<SuccessResponse<Follow>>(`${config.unfollow}/${user_id}`),
+  getUserFollowers: ({ user_id, page, limit }: { user_id: string; page: number; limit: number }) => {
+    const params = new URLSearchParams({
+      page: page.toString(),
+      limit: limit.toString()
+    })
+    return http.get<SuccessResponse<UserFollowers>>(`${config.users}/${user_id}/followers/?${params.toString()}`)
+  },
+  getUserFollowing: ({ user_id, page, limit }: { user_id: string; page: number; limit: number }) => {
+    const params = new URLSearchParams({
+      page: page.toString(),
+      limit: limit.toString()
+    })
+    return http.get<SuccessResponse<UserFollowing>>(`${config.users}/${user_id}/following/?${params.toString()}`)
+  }
 }
