# threads-web/src/types/user.type.ts
@@ -16,3 +16,29 @@ export interface User {
   username?: string // optional
   avatar?: string // optional
 }
+
+export interface UserFollowers {
+  page: number
+  limit: number
+  total_page: number
+  user_followers: {
+    id: string
+    name: string
+    username: string
+    avatar?: string
+    bio?: string
+  }[]
+}
+
+export interface UserFollowing {
+  page: number
+  limit: number
+  total_page: number
+  user_following: {
+    id: string
+    name: string
+    username: string
+    avatar?: string
+    bio?: string
+  }[]
+}
